<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pmdmrec04.MainActivity">

    <TextView
        android:id="@+id/labelInicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/labelInicio"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonInvitado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="95dp"
        android:layout_marginBottom="248dp"
        android:text="@string/buttonInvitado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelCampoContrasena"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="78dp"
        android:layout_marginEnd="16dp"
        android:text="@string/buttonAdmin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textContrasena" />

    <Button
        android:id="@+id/buttonRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="96dp"
        android:text="@string/buttonRegistro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAdmin" />

    <EditText
        android:id="@+id/textContrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/textCampoContrasena"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textUsuario" />

    <EditText
        android:id="@+id/textUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/textCampoUsuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelInicio" />

    <TextView
        android:id="@+id/labelCampoUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="36dp"
        android:text="@string/labelCampoUsuario"
        app:layout_constraintEnd_toStartOf="@+id/textUsuario"
        app:layout_constraintTop_toBottomOf="@+id/labelInicio" />

    <TextView
        android:id="@+id/labelCampoContrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="24dp"
        android:text="@string/labelCampoContrasena"
        app:layout_constraintEnd_toStartOf="@+id/textContrasena"
        app:layout_constraintTop_toBottomOf="@+id/labelCampoUsuario" />

</androidx.constraintlayout.widget.ConstraintLayout>